n sei pq ainda está bugando

--- a/index.html
+++ b/index.html
@@ -17,9 +17,12 @@
 </head>
 <body>
     <header class="cabecalho">
-        <a href="index.html" class="cabecalho__link">
-            <img src="assets/imagens/logo.png" alt="Logo Quindim de Ouro" class="cabecalho__img">
-        </a>
+        <div class="cabecalho__container">
+            <a href="index.html" class="cabecalho__link">
+                <img src="assets/imagens/logo.png" alt="Logo Quindim de Ouro" class="cabecalho__img">
+            </a>
+            <h1 class="cabecalho__nome">Quindim de Ouro</h1>
+        </div>
         <nav id="cabecalho__navegacao">
             <ul class="cabecalho__menu">
                 <li class="menu__lista"><a href="#" class="menu__link">A Quindim de Ouro</a></li>
