--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="assets/css/corpo.css">
     <link rel="stylesheet" href="assets/css/sabores.css">
     <link rel="stylesheet" href="assets/css/footer.css">
-    <link rel="stylesheet" href="node_modules/@splidejs/splide/dist/css/themes/splide-sea-green.min.css">
+    <link rel="stylesheet" href="assets/css/splide-sea-green.min.css">
 
     <title>Quindim de Ouro</title>
 </head>
@@ -114,7 +114,7 @@
 
     
     <script src="assets/js/menu.js"></script>
-    <script src="node_modules/@splidejs/splide/dist/js/splide.min.js"></script>
+    <script src="assets/js/splide.min.js"></script>
     
     <script>
         var splide = new Splide( '.splide', {
