ultimas alterações no layout do index

--- a/index.html
+++ b/index.html
@@ -108,8 +108,12 @@
     </main>
 
     <footer>
-        <p> &copy; Todos os direitos reservados a Quindim de Ouro</p>
         <img src="assets/imagens/logo.png" alt="Quindim de Ouro logo">
+        <div class="footer__conteudo">
+            <p>&copy; Todos os direitos reservados a Quindim de Ouro</p>
+            <p class="footer__telefone">WhatsApp: <a href="tel:+11 98324-5986">+55 (11) 55 98324-5986</a></p>
+        </div>
+        
     </footer>
 
     
