adicionando as outras paginas

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
         <nav id="cabecalho__navegacao">
             <ul class="cabecalho__menu">
-                <li class="menu__lista"><a href="#" class="menu__link">A Quindim de Ouro</a></li>
+                <li class="menu__lista"><a href="quindim-de-ouro.html" class="menu__link">A Quindim de Ouro</a></li>
                 <li class="menu__lista" id="produtos">
                     <button class="menu__botao">
                         Produtos
@@ -36,16 +36,16 @@
                     </button>
                     
                     <ul id="submenu">
-                        <li class="submenu__lista"><a href="#" class="menu__link">Bolos</a></li>
-                        <li class="submenu__lista"><a href="#" class="menu__link">Brigadeiros</a></li>
-                        <li class="submenu__lista"><a href="#" class="menu__link">Sobremesas</a></li>
-                        <li class="submenu__lista"><a href="#" class="menu__link">Quindim</a></li>
-                        <li class="submenu__lista"><a href="#" class="menu__link">Salgados</a></li>
-                        <li class="submenu__lista"><a href="#" class="menu__link">Celebrações</a></li>
+                        <li class="submenu__lista"><a href="bolos.html" class="menu__link">Bolos</a></li>
+                        <li class="submenu__lista"><a href="brigadeiros.html" class="menu__link">Brigadeiros</a></li>
+                        <li class="submenu__lista"><a href="sobremesas.html" class="menu__link">Sobremesas</a></li>
+                        <li class="submenu__lista"><a href="quindim.html" class="menu__link">Quindim</a></li>
+                        <li class="submenu__lista"><a href="salgados.html" class="menu__link">Salgados</a></li>
+                        <li class="submenu__lista"><a href="celebracoes.html" class="menu__link">Celebrações</a></li>
                     </ul>
                 </li>
-                <li class="menu__lista"><a href="#" class="menu__link">Loja</a></li>
-                <li class="menu__lista"><a href="#" class="menu__link">Contato</a></li>
+                <li class="menu__lista"><a href="loja.html" class="menu__link">Loja</a></li>
+                <li class="menu__lista"><a href="tel:+11 98324-5986" class="menu__link">Contato</a></li>
                 <li class="lista__botoes">
                     <a class="app" target="_blank" href="https://www.ifood.com.br/delivery/sao-paulo-sp/quindim-de-ouro-jardim-alzira/6b13d9e6-e148-4dc7-b753-bd280ce4699e">Peça no app</a>
                     <div class="redes-sociais">
@@ -66,35 +66,35 @@
                 <div class="splide__track">
                     <ul class="splide__list">
                         <li class="splide__slide">
-                          <a href="" class="container__link">
+                          <a href="bolos.html" class="container__link">
                               <img src="assets/imagens/bolos.jpg" alt="" class="container__imagem">
                               <h1 class="container__titulo">Bolos</h1>
                               <p class="container__botao">Saiba Mais</p>                    
                           </a>
                         </li>
                         <li class="splide__slide">
-                          <a href="" class="container__link">
+                          <a href="brigadeiros.html" class="container__link">
                               <img src="assets/imagens/brigadeiros.jpg" alt="" class="container__imagem">
                               <h1 class="container__titulo">Brigadeiros</h1>
                               <p class="container__botao">Saiba Mais</p>
                           </a>
                         </li>
                         <li class="splide__slide">
-                          <a href="" class="container__link">
+                          <a href="sobremesas.html" class="container__link">
                               <img src="assets/imagens/bombom-de-morango.jpg" alt="" class="container__imagem">
                               <h1 class="container__titulo">Sobremesas</h1>
                               <p class="container__botao">Saiba Mais</p>                    
                           </a>
                         </li>
                         <li class="splide__slide">
-                          <a href="" class="container__link">
+                          <a href="quindim.html" class="container__link">
                               <img src="assets/imagens/quindim.jpg" alt="" class="container__imagem">
                               <h1 class="container__titulo">Quindim</h1>
                               <p class="container__botao">Saiba Mais</p>
                           </a>
                         </li>
                         <li class="splide__slide">
-                          <a href="" class="container__link">
+                          <a href="celebracoes.html" class="container__link">
                               <img src="assets/imagens/bombom-de-morango.jpg" alt="" class="container__imagem">
                               <h1 class="container__titulo">Celebrações</h1>
                               <p class="container__botao">Saiba Mais</p>
