--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <img src="assets/imagens/logo.png" alt="Quindim de Ouro logo">
         <div class="footer__conteudo">
             <p>&copy; Todos os direitos reservados a Quindim de Ouro</p>
-            <p class="footer__telefone">WhatsApp: <a href="tel:+11 98324-5986">+55 (11) 55 98324-5986</a></p>
+            <p class="footer__telefone">WhatsApp: <a href="tel:+11 98324-5986">+55 (11) 98324-5986</a></p>
         </div>
         
     </footer>
