--- a/bolos.html
+++ b/bolos.html
@@ -64,7 +64,7 @@
             <img src="assets/imagens/banner.jpg" alt="" class="banner__imagem" data-animacao="bottom">
             <div class="banner__conteudo" data-animacao="bottom">
                 <h1 class="banner__titulo">Bolos</h1>
-                <h2 class="banner__descricao">Os melhores quindins você encontra aqui</h2>
+                <h2 class="banner__descricao">Os melhores bolos você encontra aqui</h2>
             </div>
         </section>
     </main>
