--- a/brigadeiros.html
+++ b/brigadeiros.html
@@ -60,10 +60,12 @@
     </header>
 
     <main class="conteudo">
-        <section class="id">
-            <img src="assets/imagens/fundo subida.png" alt="" class="banner__imagem">
-            <h1 class="banner__titulo">Brigadeiros</h1>
-            <h2 class="banner__descricao">Os melhores brigadeiros você encontra aqui</h2>
+        <section id="banner">
+            <img src="assets/imagens/banner.jpg" alt="" class="banner__imagem" data-animacao="bottom">
+            <div class="banner__conteudo" data-animacao="bottom">
+                <h1 class="banner__titulo">brigadeiros</h1>
+                <h2 class="banner__descricao">Os melhores brigadeiros você encontra aqui</h2>
+            </div>
         </section>
     </main>
 
