--- a/quindim.html
+++ b/quindim.html
@@ -62,9 +62,11 @@
 
     <main class="conteudo">
         <section id="banner">
-            <img src="assets/imagens/fundo subida.png" alt="" class="banner__imagem">
-            <h1 class="banner__titulo">Quindim</h1>
-            <h2 class="banner__descricao">Os melhores quindins você encontra aqui</h2>
+            <img src="assets/imagens/banner.jpg" alt="" class="banner__imagem" data-animacao="bottom">
+            <div class="banner__conteudo" data-animacao="bottom">
+                <h1 class="banner__titulo">Quindim</h1>
+                <h2 class="banner__descricao">Os melhores quindins você encontra aqui</h2>
+            </div>
         </section>
     </main>
 
