trocando as fotos e adicionando a seção de produtos nas outrs páginas

--- a/bolos.html
+++ b/bolos.html
@@ -66,7 +66,7 @@
 
     <main class="contaienr">
         <section id="banner">
-            <img src="assets/imagens/banner.jpg" alt="" class="banner__imagem" data-animacao="bottom">
+            <img src="assets/imagens/bolo-banner.jpg" alt="" class="banner__imagem" data-animacao="bottom">
             <div class="banner__conteudo" data-animacao="bottom">
                 <h1 class="banner__titulo">Bolos</h1>
                 <h2 class="banner__descricao">Os melhores bolos você encontra aqui</h2>
@@ -83,7 +83,7 @@
             <div class="produtos__container">
                 <a href="" class="item" data-categoria="">
                     <figure class="item__figure">
-                        <img src="assets/imagens/cake.png" class="item__imagem">
+                        <img src="assets/imagens/bolos-carrossel.jpg" class="item__imagem">
                     </figure>
                     <ficaption class="item__nome">Bolo Ninho duplo com Morango</ficaption>
                     <button class="item__botao">Saiba Mais</button>
