--- a/salgados.html
+++ b/salgados.html
@@ -11,7 +11,9 @@
     <link rel="stylesheet" href="assets/css/animacoes.css">
     <link rel="stylesheet" href="assets/css/header.css">
     <link rel="stylesheet" href="assets/css/banner.css">
+    <link rel="stylesheet" href="assets/css/categorias.css">
     <link rel="stylesheet" href="assets/css/corpo.css">
+    <link rel="stylesheet" href="assets/css/produtos.css">
     <link rel="stylesheet" href="assets/css/footer.css">
 
     <title>Quindim de Ouro - Salgados</title>
@@ -66,6 +68,51 @@
             <div class="banner__conteudo" data-animacao="bottom">
                 <h1 class="banner__titulo">Salgados</h1>
                 <h2 class="banner__descricao">Os melhores salgados você encontra aqui</h2>
+            </div>
+        </section>
+        <section id="categorias">
+            <h2 class="categorias__titulo" data-animacao="left">Selecione a categoria</h2>
+            <div class="categorias__div" data-animacao="left">
+                <button class="categorias__botao" data-opcao="um">aaaaaaa</button>
+                <button class="categorias__botao">aaaaaaa</button>
+            </div>
+        </section>
+        <section id="secao__produtos" data-animacao="bottom">
+            <div class="produtos__container">
+                <a href="" class="item" data-categoria="">
+                    <figure class="item__figure">
+                        <img src="assets/imagens/" class="item__imagem">
+                    </figure>
+                    <ficaption class="item__nome">Bolo Ninho duplo com Morango</ficaption>
+                    <button class="item__botao">Saiba Mais</button>
+                </a>
+                <a class="item" data-categoria="">
+                    <figure class="item__figure">
+                        <img src="assets/imagens/" class="item__imagem"></figure>
+                    <ficaption class="item__nome">Nome do item</ficaption>
+                    <button class="item__botao">Saiba Mais</button>
+                </a>
+                <a class="item" data-categoria="">
+                    <figure class="item__figure">
+                        <img src="assets/imagens/" class="item__imagem">
+                    </figure>
+                    <ficaption class="item__nome">Nome do item</ficaption>
+                    <button class="item__botao">Saiba Mais</button>
+                </a>
+                <a class="item" data-categoria="">
+                    <figure class="item__figure">
+                        <img src="assets/imagens/" class="item__imagem">
+                    </figure>
+                    <ficaption class="item__nome">Nome do item</ficaption>
+                    <button class="item__botao">Saiba Mais</button>
+                </a>
+                <a class="item" data-categoria="">
+                    <figure class="item__figure">
+                        <img src="assets/imagens/" class="item__imagem">
+                    </figure>
+                    <ficaption class="item__nome">Nome do item</ficaption>
+                    <button class="item__botao">Saiba Mais</button>
+                </a>
             </div>
         </section>
     </main>
