--- a/sobremesas.html
+++ b/sobremesas.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="assets/css/header.css">
     <link rel="stylesheet" href="assets/css/corpo.css">
     <link rel="stylesheet" href="assets/css/banner.css">
+    <link rel="stylesheet" href="assets/css/categorias.css">
+    <link rel="stylesheet" href="assets/css/produtos.css">
     <link rel="stylesheet" href="assets/css/footer.css">
 
     <title>Quindim de Ouro - Sobremesas</title>
@@ -62,10 +64,56 @@
 
     <main class="conteudo">
         <section id="banner">
-            <img src="assets/imagens/banner.jpg" alt="" class="banner__imagem" data-animacao="bottom">
+            <img src="assets/imagens/sobremesas-banner.jpg" alt="" class="banner__imagem" data-animacao="bottom">
             <div class="banner__conteudo" data-animacao="bottom">
                 <h1 class="banner__titulo">Sobremesas</h1>
                 <h2 class="banner__descricao">As melhores soremesas você encontra aqui</h2>
+            </div>
+        </section>
+        <section id="categorias">
+            <h2 class="categorias__titulo" data-animacao="left">Selecione a categoria</h2>
+            <div class="categorias__div" data-animacao="left">
+                <button class="categorias__botao" data-opcao="um">Tortas Doces</button>
+                <button class="categorias__botao">Bombons</button>
+                <button class="categorias__botao">Doces Quentes</button>
+            </div>
+        </section>
+        <section id="secao__produtos" data-animacao="bottom">
+            <div class="produtos__container">
+                <a href="" class="item" data-categoria="">
+                    <figure class="item__figure">
+                        <img src="assets/imagens/quindim-item.jpg" class="item__imagem">
+                    </figure>
+                    <ficaption class="item__nome">Quindim</ficaption>
+                    <button class="item__botao">Saiba Mais</button>
+                </a>
+                <a class="item" data-categoria="">
+                    <figure class="item__figure">
+                        <img src="assets/imagens/" class="item__imagem"></figure>
+                    <ficaption class="item__nome">Nome do item</ficaption>
+                    <button class="item__botao">Saiba Mais</button>
+                </a>
+                <a class="item" data-categoria="">
+                    <figure class="item__figure">
+                        <img src="assets/imagens/" class="item__imagem">
+                    </figure>
+                    <ficaption class="item__nome">Nome do item</ficaption>
+                    <button class="item__botao">Saiba Mais</button>
+                </a>
+                <a class="item" data-categoria="">
+                    <figure class="item__figure">
+                        <img src="assets/imagens/" class="item__imagem">
+                    </figure>
+                    <ficaption class="item__nome">Nome do item</ficaption>
+                    <button class="item__botao">Saiba Mais</button>
+                </a>
+                <a class="item" data-categoria="">
+                    <figure class="item__figure">
+                        <img src="assets/imagens/" class="item__imagem">
+                    </figure>
+                    <ficaption class="item__nome">Nome do item</ficaption>
+                    <button class="item__botao">Saiba Mais</button>
+                </a>
             </div>
         </section>
     </main>
