--- a/bolos.html
+++ b/bolos.html
@@ -65,7 +65,7 @@
 
     <main class="contaienr">
         <section id="banner">
-            <img src="assets/imagens/bolo-banner.jpg" alt="" class="banner__imagem" data-animacao="bottom">
+            <img src="assets/imagens/bolo-banner.jpg" class="banner__imagem" data-animacao="bottom">
             <div class="banner__conteudo" data-animacao="bottom">
                 <h1 class="banner__titulo">Bolos</h1>
                 <h2 class="banner__descricao">Os melhores bolos você encontra aqui</h2>
@@ -82,15 +82,15 @@
             <div class="produtos__container">
                 <a href="" class="item" data-categoria="">
                     <figure class="item__figure">
-                        <img src="assets/imagens/bolos-carrossel.jpg" class="item__imagem">
+                        <img src="assets/imagens/bolo-ninho-duplo-morango.jpg" class="item__imagem">
                     </figure>
                     <ficaption class="item__nome">Bolo Ninho duplo com Morango</ficaption>
                     <button class="item__botao">Saiba Mais</button>
                 </a>
                 <a class="item" data-categoria="">
                     <figure class="item__figure">
-                        <img src="assets/imagens/chocolate-cake.png" class="item__imagem"></figure>
-                    <ficaption class="item__nome">Nome do item</ficaption>
+                        <img src="assets/imagens/bolos-carrossel.jpg" class="item__imagem"></figure>
+                    <ficaption class="item__nome">Bolos Prestígio</ficaption>
                     <button class="item__botao">Saiba Mais</button>
                 </a>
                 <a class="item" data-categoria="">
