--- a/paginas-itens/bolos/bolo-ninho-duplo-morango.html
+++ b/paginas-itens/bolos/bolo-ninho-duplo-morango.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/assets/css/reset.css">
+    <link rel="stylesheet" href="../../assets/css/reset.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <link rel="stylesheet" href="/assets/css/variaveis.css">
-    <link rel="stylesheet" href="/assets/css/animacoes.css">
-    <link rel="stylesheet" href="/assets/css/header.css">
-    <link rel="stylesheet" href="/assets/css/banner.css">
-    <link rel="stylesheet" href="/assets/css/corpo.css">
-    <link rel="stylesheet" href="/assets/css/categorias.css">
-    <link rel="stylesheet" href="/assets/css/item.css">
-    <link rel="stylesheet" href="/assets/css/footer.css">
+    <link rel="shortcut icon" href="../../assets/imagens/logo-branco.jpg" type="image/x-icon">
+    <link rel="stylesheet" href="../../assets/css/variaveis.css">
+    <link rel="stylesheet" href="../../assets/css/animacoes.css">
+    <link rel="stylesheet" href="../../assets/css/header.css">
+    <link rel="stylesheet" href="../../assets/css/banner.css">
+    <link rel="stylesheet" href="../../assets/css/corpo.css">
+    <link rel="stylesheet" href="../../assets/css/categorias.css">
+    <link rel="stylesheet" href="../../assets/css/item.css">
+    <link rel="stylesheet" href="../../assets/css/footer.css">
 
     <title>Quindim de Ouro - Bolo Ninho Duplo com Morango</title>
 </head>
@@ -21,8 +22,8 @@
     <header class="cabecalho">
         <div class="cabecalho__container">
             <div class="container__logo">
-                <a href="/index.html" class="cabecalho__link">
-                    <img src="/assets/imagens/logo.png" alt="Logo Quindim de Ouro" class="cabecalho__img">
+                <a href="../../index.html" class="cabecalho__link">
+                    <img src="../../assets/imagens/logo.png" alt="Logo Quindim de Ouro" class="cabecalho__img">
                 </a>
                 <h1 class="cabecalho__nome">Quindim de Ouro</h1>
             </div>
@@ -30,7 +31,7 @@
         </div>
         <nav id="cabecalho__navegacao">
             <ul class="cabecalho__menu">
-                <li class="menu__lista"><a href="/quindim-de-ouro.html" class="menu__link">A Quindim de Ouro</a></li>
+                <li class="menu__lista"><a href="../../quindim-de-ouro.html" class="menu__link">A Quindim de Ouro</a></li>
                 <li class="menu__lista" id="produtos">
                     <button class="menu__botao">
                         Produtos
@@ -40,20 +41,20 @@
                     </button>
                     
                     <ul id="submenu">
-                        <li class="submenu__lista"><a href="/bolos.html" class="menu__link">Bolos</a></li>
-                        <li class="submenu__lista"><a href="/brigadeiros.html" class="menu__link">Brigadeiros</a></li>
-                        <li class="submenu__lista"><a href="/sobremesas.html" class="menu__link">Sobremesas</a></li>
-                        <li class="submenu__lista"><a href="/salgados.html" class="menu__link">Salgados</a></li>
-                        <li class="submenu__lista"><a href="/celebracoes.html" class="menu__link">Celebrações</a></li>
+                        <li class="submenu__lista"><a href="../../bolos.html" class="menu__link">Bolos</a></li>
+                        <li class="submenu__lista"><a href="../../brigadeiros.html" class="menu__link">Brigadeiros</a></li>
+                        <li class="submenu__lista"><a href="../../sobremesas.html" class="menu__link">Sobremesas</a></li>
+                        <li class="submenu__lista"><a href="../../salgados.html" class="menu__link">Salgados</a></li>
+                        <li class="submenu__lista"><a href="../../celebracoes.html" class="menu__link">Celebrações</a></li>
                     </ul>
                 </li>
-                <li class="menu__lista"><a href="/loja.html" class="menu__link">Loja</a></li>
+                <li class="menu__lista"><a href="../../loja.html" class="menu__link">Loja</a></li>
                 <li class="menu__lista"><a href="tel:+11 98324-5986" class="menu__link">Contato</a></li>
                 <li class="lista__botoes">
                     <a class="app" target="_blank" href="https://www.ifood.com.br/delivery/sao-paulo-sp/quindim-de-ouro-jardim-alzira/6b13d9e6-e148-4dc7-b753-bd280ce4699e">Peça no app</a>
                     <div class="redes-sociais">
-                        <a href="https://www.instagram.com/quindimdeouro/" target="_blank"><img src="/assets/imagens/instagram.png" class="instagram" alt = "Instagram da Quindim de Ouro"></a> </img>
-                        <a href="#" target="_blank"><img src="/assets/imagens/facebook.png" class="facebook" alt = "Facebook da Quindim de Ouro"></a> </img>
+                        <a href="https://www.instagram.com/quindimdeouro/" target="_blank"><img src="../../assets/imagens/instagram.png" class="instagram" alt = "Instagram da Quindim de Ouro"></a> </img>
+                        <a href="#" target="_blank"><img src="../../assets/imagens/facebook.png" class="facebook" alt = "Facebook da Quindim de Ouro"></a> </img>
                     </div>
                 </li>
             </ul>
@@ -64,8 +65,8 @@
     </header>
 
     <main>
-        <div class="container">
-            <img src="/assets/imagens/bolo-ninho-duplo-morango.jpg" data-animacao="left" alt="Bolo ninho duplo com morango" class="conteudo__imagem">
+        <div class="item__container">
+            <img src="../../assets/imagens/bolo-ninho-duplo-morango.jpg" data-animacao="left" alt="Bolo ninho duplo com morango" class="conteudo__imagem">
             <div class="container__conteudo" data-animacao="bottom">
                 <h1 class="conteudo__titulo">Bolo Ninho Duplo com Morango</h1>
                 <p class="conteudo__descricao">Massa de pão de ló bem fofinha, recheado com uma deliciosa compota de morango, mousse de leite ninho e um cremoso brigadeiro de ninho</p>
@@ -81,7 +82,7 @@
     </main>
 
     <footer>
-        <img src="/assets/imagens/logo.png" alt="Quindim de Ouro logo">
+        <img src="../../assets/imagens/logo.png" alt="Quindim de Ouro logo">
         <div class="footer__conteudo">
             <p>&copy; Todos os direitos reservados a Quindim de Ouro</p>
             <p class="footer__telefone">WhatsApp: <a href="tel:+11 98324-5986">+55 (11) 98324-5986</a></p>
@@ -89,7 +90,7 @@
         
     </footer>
 
-    <script src="/assets/js/animacao.js"></script>
-    <script src="/assets/js/menu.js"></script>
+    <script src="../../assets/js/animacao.js"></script>
+    <script src="../../assets/js/menu.js"></script>
 </body>
 </html>
