adicionando itens (em conclusão)

--- a/bolos.html
+++ b/bolos.html
@@ -87,32 +87,32 @@
                     <ficaption class="item__nome">Ninho duplo com Morango</ficaption>
                     <button class="item__botao">Saiba Mais</button>
                 </a>
-                <a href="paginas-itens/bolos/bolo-prestigio.html" class="item" data-categoria="dois">
+                <a href="paginas-itens/bolos/bolo-red-velvet.html" class="item" data-categoria="dois">
                     <figure class="item__figure">
-                        <img src="assets/imagens/bol-red-velvet.jpg" class="item__imagem">
+                        <img src="assets/imagens/bolo-red-velvet.jpg" class="item__imagem">
                     </figure>
-                    <ficaption class="item__nome">Red Velvet com Ninho</ficaption>
+                    <ficaption class="item__nome">Bolo Red Velvet com Ninho</ficaption>
                     <button class="item__botao">Saiba Mais</button>
                 </a>
-                <a class="item" data-categoria="">
+                <a href="paginas-itens/bolos/bolo-floresta-negra.html" class="item" data-categoria="">
                     <figure class="item__figure">
                         <img src="assets/imagens/bolo-floresta-negra.jpg" class="item__imagem">
                     </figure>
-                    <ficaption class="item__nome">Floresta Negra</ficaption>
+                    <ficaption class="item__nome">Bolo Floresta Negra</ficaption>
                     <button class="item__botao">Saiba Mais</button>
                 </a>
-                <a class="item" data-categoria="">
+                <a href="paginas-itens/bolos/bolo-compadre.html" class="item" data-categoria="">
                     <figure class="item__figure">
                         <img src="assets/imagens/bolo-compadre.png" class="item__imagem">
                     </figure>
                     <ficaption class="item__nome">Bolo Compadre</ficaption>
                     <button class="item__botao">Saiba Mais</button>
                 </a>
-                <a class="item" data-categoria="">
+                <a href="paginas-itens/bolos/bolo-prestigio.html" class="item" data-categoria="">
                     <figure class="item__figure">
-                        <img src="assets/imagens/cake.png" class="item__imagem">
+                        <img src="assets/imagens/bolo-prestigio.jpg" class="item__imagem">
                     </figure>
-                    <ficaption class="item__nome">Nome do item</ficaption>
+                    <ficaption class="item__nome">Bolo Prestígio</ficaption>
                     <button class="item__botao">Saiba Mais</button>
                 </a>
             </div>
