--- a/sobremesas.html
+++ b/sobremesas.html
@@ -79,38 +79,65 @@
         </section>
         <section id="secao__produtos" data-animacao="bottom">
             <div class="produtos__container">
-                <a href="" class="item" data-categoria="">
+                <a href="paginas-itens/sobremesas/quindim.html" class="item" data-categoria="">
                     <figure class="item__figure">
                         <img src="assets/imagens/quindim-item.jpg" class="item__imagem">
                     </figure>
                     <ficaption class="item__nome">Quindim</ficaption>
                     <button class="item__botao">Saiba Mais</button>
                 </a>
-                <a class="item" data-categoria="">
+                <a href="paginas-itens/sobremesas/pao-de-mel.html" class="item" data-categoria="">
+                    <figure class="item__figure">
+                        <img src="assets/imagens/bombom-pao-de-mel.jpg" class="item__imagem">
+                    </figure>
+                    <ficaption class="item__nome">Pão de Mel</ficaption>
+                    <button class="item__botao">Saiba Mais</button>
+                </a>
+                <a href="paginas-itens/sobremesas/bombom-de-morango.html" class="item" data-categoria="">
                     <figure class="item__figure">
                         <img src="assets/imagens/bombom-de-morango.jpg" class="item__imagem"></figure>
                     <ficaption class="item__nome">Bombom de Morango</ficaption>
                     <button class="item__botao">Saiba Mais</button>
                 </a>
-                <a class="item" data-categoria="">
+                <a href="paginas-itens/sobremesas/coxinha-de-morango.html" class="item" data-categoria="">
                     <figure class="item__figure">
-                        <img src="assets/imagens/" class="item__imagem">
-                    </figure>
-                    <ficaption class="item__nome">Nome do item</ficaption>
+                        <img src="assets/imagens/coxinha-de-morango.jpg" class="item__imagem"></figure>
+                    <ficaption class="item__nome">Coxinha de Morango</ficaption>
                     <button class="item__botao">Saiba Mais</button>
                 </a>
-                <a class="item" data-categoria="">
+                <a href="paginas-itens/sobremesas/brownie-ninho.html" class="item" data-categoria="">
                     <figure class="item__figure">
-                        <img src="assets/imagens/" class="item__imagem">
+                        <img src="assets/imagens/brownie-ninho.jpg" class="item__imagem">
                     </figure>
-                    <ficaption class="item__nome">Nome do item</ficaption>
+                    <ficaption class="item__nome">Brownie Ninho</ficaption>
                     <button class="item__botao">Saiba Mais</button>
                 </a>
-                <a class="item" data-categoria="">
+                <a href="paginas-itens/sobremesas/brownie-brigadeiro-ao-leite.html" class="item" data-categoria="">
                     <figure class="item__figure">
-                        <img src="assets/imagens/" class="item__imagem">
+                        <img src="assets/imagens/brownie-brigadeiro-ao-leite.jpg" class="item__imagem">
                     </figure>
-                    <ficaption class="item__nome">Nome do item</ficaption>
+                    <ficaption class="item__nome">Brownie Brigadeiro ao Leite</ficaption>
+                    <button class="item__botao">Saiba Mais</button>
+                </a>
+                <a href="paginas-itens/sobremesas/brownie-brigadeiro-duo.html" class="item" data-categoria="">
+                    <figure class="item__figure">
+                        <img src="assets/imagens/brownie-brigadeiro-duplo.jpg" class="item__imagem">
+                    </figure>
+                    <ficaption class="item__nome">Brownie brigadeiro Duo</ficaption>
+                    <button class="item__botao">Saiba Mais</button>
+                </a>
+                <a href="paginas-itens/sobremesas/pudim.html" class="item" data-categoria="">
+                    <figure class="item__figure">
+                        <img src="assets/imagens/pudim.jpg" class="item__imagem">
+                    </figure>
+                    <ficaption class="item__nome">Pudim</ficaption>
+                    <button class="item__botao">Saiba Mais</button>
+                </a>
+                <a href="paginas-itens/sobremesas/torta-de-morango.html" class="item" data-categoria="">
+                    <figure class="item__figure">
+                        <img src="assets/imagens/torta-de-morango.jpg" class="item__imagem">
+                    </figure>
+                    <ficaption class="item__nome">Tora de Morango</ficaption>
                     <button class="item__botao">Saiba Mais</button>
                 </a>
             </div>
